[tool.poetry]
name = "hf-caching-demo"
version = "0.1.0"
description = ""
authors = ["lucaslingle <lucasdaxlingle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
gcsfs = "2023.10.0"
fsspec = "2023.10.0"
datasets = "2.16.1"
transformers = "4.36.2"
importlib-resources = "^6.1.1"
async-timeout = "^4.0.3"

[tool.poetry.group.cpu.dependencies]
python = "3.10.*"

[tool.poetry.group.tpu.dependencies]
python = ">=3.9,<3.10.dev0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
